plugins {
    id 'com.android.library'
    id 'de.mannodermaus.android-junit5'
}

apply from: "../quality.gradle"
apply from: "jacoco.gradle"
apply from: "publish.gradle"


android {
    compileSdkVersion 31

    lintOptions {
        abortOnError false
    }

    defaultConfig {
        minSdkVersion 26
        targetSdkVersion 31
        consumerProguardFiles 'consumer-rules.pro'
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        testInstrumentationRunnerArguments clearPackageData: 'true',
                "runnerBuilder": "de.mannodermaus.junit5.AndroidJUnit5Builder"
    }

    sourceSets {
        main.java {
            srcDirs += ['../../src/main/java', 'src/main/java']
            // FIXME: seems these sources are duplicated from iot-device-sdk-java-v2, resolve that
            exclude '**/software/amazon/awssdk/eventstreamrpc/**'
        }
        androidTest {
            java.srcDirs += ['../../src/test/java', '../../src/integrationtests/java']
            assets {
                srcDirs = ['../../src/test/resources', '../../src/integrationtests/resources']
                exclude 'mockito-extensions/*'
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            testCoverageEnabled true
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += ['-Xplugin:Manifold', '-AANDROID=android']
    }

    /* httpclient-4.5.13.jar and httpcore-4.4.15.jar have conflict on that file */
    packagingOptions {
        exclude 'META-INF/*'
        exclude 'codegen-resources/*'
    }

    testOptions {
        unitTests.returnDefaultValues = true
    }

    configurations {
        testImplementation.extendsFrom annotationProcessor
        androidTestImplementation.extendsFrom testImplementation
        all {
            // "com.aws.greengrass:logging" already has "ch.qos.logback"
            exclude group: "ch.qos.logback", module: "logback-classic"

            // "aws-iot-device-sdk" already has "org.slf4j"
            exclude group: "org.slf4j", module: "slf4j-api"
            exclude group: 'org.hamcrest', module: 'java-hamcrest'
        }
    }
}

/*
repositories {
    mavenLocal()
    mavenCentral()
}
*/

dependencies {
    implementation 'com.aws.greengrass.android.component:base-library:1.0.5'

    implementation 'androidx.core:core:1.7.0'

    def manifoldVersion = "2022.1.4"
    annotationProcessor "systems.manifold:manifold-preprocessor:${manifoldVersion}"
    //for junit tests
    testAnnotationProcessor "systems.manifold:manifold-preprocessor:${manifoldVersion}"
    //for android tests
    androidTestAnnotationProcessor "systems.manifold:manifold-preprocessor:${manifoldVersion}"

    // FIXME: android: WARNING: CloudFront aws-iot-device-sdk:1.5.3-WINDOWS-SNAPSHOT contains jackson-core 2.12.0
    //                            aws-iot-device-sdk:1.5.4-Klika-SNAPSHOT based on 2.13.0

    implementation 'io.github.lukehutch:fast-classpath-scanner:2.21'

    def jacksonVersion = "2.13.0"
    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
    implementation 'stax:stax:1.2.0'
    implementation 'javax.inject:javax.inject:1'

    implementation "commons-logging:commons-logging-api:1.1"

    implementation 'com.aws.greengrass:component-common:2.1.1-SNAPSHOT'       // CloudFront
//    implementation 'com.aws.greengrass:component-common:2.1.1-Klika-SNAPSHOT' // Local version

    implementation 'com.aws.greengrass:logging:2.1.1-SNAPSHOT'          // CloudFront
//    implementation 'com.aws.greengrass:logging:2.1.1-Klika-SNAPSHOT'    // Local version

    implementation 'com.vdurmont:semver4j:3.1.0'


/* FIXME: android: software.amazon.awssdk:apache-client references to default version of org.apache.httpcomponents:httpclient 4.5.13 which cause runtime conflict to old embedded impmentatation used by Android
  java.lang.NoSuchFieldError: No static field INSTANCE of type Lorg/apache/http/conn/ssl/AllowAllHostnameVerifier; in class Lorg/apache/http/conn/ssl/AllowAllHostnameVerifier; or its superclasses (declaration of 'org.apache.http.conn.ssl.AllowAllHostnameVerifier' appears in /system/framework/framework.jar!classes4.dex)
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
*/
// four working solution: repack 3 jars manually with https://github.com/google/jarjar
    implementation files('libs/httpcore-4.4.13-android.jar')                    // with renamed org.apache.http
    implementation files('libs/httpclient-4.5.13-android.jar')                  // with renamed org.apache.http
    implementation 'software.amazon.awssdk:greengrassv2-data:2.15.x-SNAPSHOT'   // CloudFront


    def awsSdkVersion = "2.17.60"
    implementation files("libs/apache-client-$awsSdkVersion-android.jar")      // with renamed org.apache.http



    implementation ("software.amazon.awssdk:greengrassv2:$awsSdkVersion") {            // mavenCentral
        exclude group: 'software.amazon.awssdk', module: 'apache-client'
    }
    implementation ("software.amazon.awssdk:iot:$awsSdkVersion") {                     // mavenCentral
        exclude group: 'software.amazon.awssdk', module: 'apache-client'
    }
    implementation ("software.amazon.awssdk:iam:$awsSdkVersion") {                     // mavenCentral
        exclude group: 'software.amazon.awssdk', module: 'apache-client'
    }

    implementation ("software.amazon.awssdk:s3:$awsSdkVersion") {                      // mavenCentral
        exclude group: 'software.amazon.awssdk', module: 'apache-client'
    }

    implementation ("software.amazon.awssdk:sts:$awsSdkVersion") {                     // mavenCentral
        exclude group: 'software.amazon.awssdk', module: 'apache-client'
    }

    implementation ("software.amazon.awssdk:ecr:$awsSdkVersion") {                     // mavenCentral
        exclude group: 'software.amazon.awssdk', module: 'apache-client'
    }

    implementation 'org.zeroturnaround:zt-process-killer:1.10'
    implementation 'com.github.oshi:oshi-core:5.8.2'
    implementation 'net.java.dev.jna:jna:5.9.0'
    implementation 'net.java.dev.jna:jna-platform:5.9.0'

    implementation 'com.google.code.gson:gson:2.9.0'

    implementation files('libs/openjdk-http-server.jar')

    testImplementation 'com.linkedin.dexmaker:dexmaker-mockito-inline:2.28.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
    testImplementation 'org.hamcrest:hamcrest-core:2.2'
    testImplementation 'com.github.grantwest.eventually:hamcrest-eventually-matchers:0.0.3'
    testImplementation 'org.bouncycastle:bcpkix-jdk15on:1.69'
    testImplementation 'commons-codec:commons-codec:1.15'

    androidTestImplementation "androidx.test:runner:1.4.0"
    androidTestImplementation 'androidx.test:core:1.4.0'
    androidTestImplementation "de.mannodermaus.junit5:android-test-core:1.3.0"
    androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:1.3.0"

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
    androidTestCompileOnly 'org.projectlombok:lombok:1.18.22'
    androidTestAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
}
